[Fix][Lex] Fixed overflow in product page

--- a/client/src/components/pages/Product/Product.module.css
+++ b/client/src/components/pages/Product/Product.module.css
@@ -1,7 +1,7 @@
 .container {
   flex: 1;
+  overflow-y: scroll;
   padding: 1.75em;
-  width: 100%;
 }
 
 .header {
